- bump version - support newer java versions when running test cases