@@ -10,7 +10,7 @@
     <groupId>com.intellisrc</groupId>
     <artifactId>spark-core</artifactId>
     <packaging>bundle</packaging>
-    <version>2.9.4-unofficial-5</version>
+    <version>2.9.4-unofficial-6-SNAPSHOT</version>
     <name>Spark</name>
     <description>A micro framework for creating web applications in Kotlin, Groovy and Java with minimal effort</description>
     <url>http://www.sparkjava.com</url>
@@ -324,6 +324,7 @@
                 <configuration>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
